// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme contract > renders each repository-owned preset deterministically 1`] = `
"/* Preset: minimal */
.home-hero, .page-heading { max-width: 40rem; }
.article-navigation-link { border-top: 1px solid var(--theme-border); }
/* Header: compact */
.site-header nav { min-height: 4rem; }
/* Post list: divided */
.blog-list { gap: 0; }
.blog-list-item { background: transparent; border: 0; border-bottom: 1px solid var(--theme-border); border-radius: 0; padding: var(--theme-space) 0; }
.blog-list-item:first-child { border-top: 1px solid var(--theme-border); }
/* Code blocks: plain */
.prose pre { border-color: transparent; border-inline-start: 0.2rem solid var(--theme-border); border-radius: 0; }
/* Extended Markdown */
.prose .callout, .prose .spoiler, .prose dl { margin-block: 1.35em; }
.prose .callout {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-inline-start: 0.25rem solid var(--theme-accent);
  border-radius: var(--theme-radius);
  padding: 0.85rem 1rem;
}
.prose .callout-title {
  color: var(--theme-accent);
  font-family: var(--theme-heading-font);
  font-weight: 750;
  margin-block: 0 0.35rem;
}
.prose .callout > :last-child, .prose .spoiler > :last-child { margin-block-end: 0; }
.prose .spoiler {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-radius: var(--theme-radius);
  padding: 0.75rem 1rem;
}
.prose .spoiler-title {
  color: var(--theme-text);
  cursor: pointer;
  font-family: var(--theme-heading-font);
  font-weight: 700;
}
.prose .spoiler[open] .spoiler-title { margin-block-end: 0.75rem; }
.prose dl { display: grid; gap: 0.45rem; }
.prose dt { font-family: var(--theme-heading-font); font-weight: 750; }
.prose dd { margin-inline-start: var(--theme-space); }
.prose .katex { max-width: 100%; }
.prose math[display="block"] {
  display: block;
  margin-inline: auto;
  max-width: 100%;
  overflow-x: auto;
  padding-block: 0.35rem;
}
.prose .katex-error { color: var(--theme-accent); font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; }

"
`;

exports[`theme contract > renders each repository-owned preset deterministically 2`] = `
"/* Preset: editorial */
h1, h2, h3 { letter-spacing: -0.045em; }
.site-header { border-bottom: 3px double var(--theme-border); }
.blog-list-item:first-child .blog-item-title { font-size: clamp(1.75rem, 4vw, 2.8rem); }
.article-navigation-link { border-top: 3px double var(--theme-border); }
@media (min-width: 48rem) {
  .blog-list { grid-template-columns: repeat(2, minmax(0, 1fr)); }
  .blog-list-item:first-child { grid-column: 1 / -1; }
  .blog-list-item:first-child .blog-item-link { min-height: 8rem; }
}
/* Header: compact */
.site-header nav { min-height: 4rem; }
/* Post list: divided */
.blog-list { gap: 0; }
.blog-list-item { background: transparent; border: 0; border-bottom: 1px solid var(--theme-border); border-radius: 0; padding: var(--theme-space) 0; }
.blog-list-item:first-child { border-top: 1px solid var(--theme-border); }
/* Code blocks: plain */
.prose pre { border-color: transparent; border-inline-start: 0.2rem solid var(--theme-border); border-radius: 0; }
/* Extended Markdown */
.prose .callout, .prose .spoiler, .prose dl { margin-block: 1.35em; }
.prose .callout {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-inline-start: 0.25rem solid var(--theme-accent);
  border-radius: var(--theme-radius);
  padding: 0.85rem 1rem;
}
.prose .callout-title {
  color: var(--theme-accent);
  font-family: var(--theme-heading-font);
  font-weight: 750;
  margin-block: 0 0.35rem;
}
.prose .callout > :last-child, .prose .spoiler > :last-child { margin-block-end: 0; }
.prose .spoiler {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-radius: var(--theme-radius);
  padding: 0.75rem 1rem;
}
.prose .spoiler-title {
  color: var(--theme-text);
  cursor: pointer;
  font-family: var(--theme-heading-font);
  font-weight: 700;
}
.prose .spoiler[open] .spoiler-title { margin-block-end: 0.75rem; }
.prose dl { display: grid; gap: 0.45rem; }
.prose dt { font-family: var(--theme-heading-font); font-weight: 750; }
.prose dd { margin-inline-start: var(--theme-space); }
.prose .katex { max-width: 100%; }
.prose math[display="block"] {
  display: block;
  margin-inline: auto;
  max-width: 100%;
  overflow-x: auto;
  padding-block: 0.35rem;
}
.prose .katex-error { color: var(--theme-accent); font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; }

"
`;

exports[`theme contract > renders each repository-owned preset deterministically 3`] = `
"/* Preset: notebook */
body {
  background-image: linear-gradient(var(--theme-border) 1px, transparent 1px);
  background-size: 100% 1.75rem;
}
.site-header nav, main, .site-footer, footer { background: var(--theme-background); }
.article-navigation-link {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-radius: var(--theme-radius);
  padding: var(--theme-space);
}
.blog-item-link { min-height: 6rem; }
/* Header: compact */
.site-header nav { min-height: 4rem; }
/* Post list: divided */
.blog-list { gap: 0; }
.blog-list-item { background: transparent; border: 0; border-bottom: 1px solid var(--theme-border); border-radius: 0; padding: var(--theme-space) 0; }
.blog-list-item:first-child { border-top: 1px solid var(--theme-border); }
/* Code blocks: plain */
.prose pre { border-color: transparent; border-inline-start: 0.2rem solid var(--theme-border); border-radius: 0; }
/* Extended Markdown */
.prose .callout, .prose .spoiler, .prose dl { margin-block: 1.35em; }
.prose .callout {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-inline-start: 0.25rem solid var(--theme-accent);
  border-radius: var(--theme-radius);
  padding: 0.85rem 1rem;
}
.prose .callout-title {
  color: var(--theme-accent);
  font-family: var(--theme-heading-font);
  font-weight: 750;
  margin-block: 0 0.35rem;
}
.prose .callout > :last-child, .prose .spoiler > :last-child { margin-block-end: 0; }
.prose .spoiler {
  background: var(--theme-surface);
  border: 1px solid var(--theme-border);
  border-radius: var(--theme-radius);
  padding: 0.75rem 1rem;
}
.prose .spoiler-title {
  color: var(--theme-text);
  cursor: pointer;
  font-family: var(--theme-heading-font);
  font-weight: 700;
}
.prose .spoiler[open] .spoiler-title { margin-block-end: 0.75rem; }
.prose dl { display: grid; gap: 0.45rem; }
.prose dt { font-family: var(--theme-heading-font); font-weight: 750; }
.prose dd { margin-inline-start: var(--theme-space); }
.prose .katex { max-width: 100%; }
.prose math[display="block"] {
  display: block;
  margin-inline: auto;
  max-width: 100%;
  overflow-x: auto;
  padding-block: 0.35rem;
}
.prose .katex-error { color: var(--theme-accent); font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; }

"
`;
